--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "openai": "^4.47.1",
-    "vlc-player": "^2.0.0"
+    "vlc-player": "^2.0.0",
+    "ytdl-core": "^4.11.5"
   }
 }
