--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-scripts": "5.0.1",
     "vlc-player": "^2.0.0",
     "web-vitals": "^2.1.4"
