--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "font-awesome": "^4.7.0",
+    "fuse.js": "^7.0.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
