--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@distube/ytdl-core": "^4.13.5",
     "@supabase/gotrue-js": "^2.46.1",
     "@supabase/supabase-js": "^2.43.5",
     "axios": "^1.7.2",
